Added icon left menu

--- a/front/src/components/leftMenu/LeftMenu.css
+++ b/front/src/components/leftMenu/LeftMenu.css
@@ -1,10 +1,10 @@
 /* Position and sizing of burger button */
 .bm-burger-button {
     position: fixed;
-    width: 36px;
-    height: 30px;
+    width: 25px;
+    height: 25px;
     left: 36px;
-    top: 36px;
+    top: 29px;
   }
   
   /* Color/shape of burger icon bars */
@@ -45,4 +45,9 @@
   /* Styling of overlay */
   .bm-overlay {
     background: rgba(0, 0, 0, 0.3);
+  }
+
+  .menu-title { 
+    display: block; 
+    outline: none;
   }
