--- a/front/src/App.css
+++ b/front/src/App.css
@@ -7,15 +7,21 @@
   height: 80px;
 }
 
-.App-header {
+.app-header {
   background-color: #222;
-  height: 150px;
+  height: 50px;
   padding: 20px;
   color: white;
 }
 
-.App-title {
+.app-title {
   font-size: 1.5em;
+}
+
+.user-photo {
+  float: right;  
+  height: 50px;
+  width: 50px;
 }
 
 .App-intro {
